@@ -69,6 +69,32 @@
       "command": "python",
       "args": ["./scripts/tests.py", "--integ-tests", "--ignore-return-code"],
       "dependsOn": ["build"]
+    },
+    {
+      "label": "unittests (current, valgrind)",
+      "type": "shell",
+      "command": "python",
+      "args": [
+        "./scripts/tests.py",
+        "--unit-tests",
+        "--ignore-return-code",
+        "--filter-file=${file}",
+        "--valgrind"
+      ],
+      "dependsOn": ["build"]
+    },
+    {
+      "label": "integtests (current, valgrind)",
+      "type": "shell",
+      "command": "python",
+      "args": [
+        "./scripts/tests.py",
+        "--integ-tests",
+        "--ignore-return-code",
+        "--filter-file=${file}",
+        "--valgrind"
+      ],
+      "dependsOn": ["build"]
     }
   ]
 }
