@@ -4,3 +4,4 @@ python-dotenv
 pyyaml
 dmgbuild; sys_platform == 'darwin'
 aqtinstall; sys_platform == 'win32' or sys_platform == 'darwin'
+colorama
