@@ -53,6 +53,7 @@ Enhancements:
 - #7384 Run `install_deps.py` script when building containers weekly
 - #7389 Correct Qt macOS target and drop `Core5Compat` lib
 - #7383 Solve SonarCloud security hotspots and bugs
+- #7401 Run Valgrind on unit tests in CI to detect memory leaks
 
 # 1.14.6
 
